<?xml version="1.0"?>
<package format="2">
  <name>fl_compvis</name>
  <version>0.0.0</version>
  <description>The fl_compvis package</description>
  <maintainer email="amx1989@yandex.ru">marat</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
