<?xml version="1.0"?>
<package format="2">
  <name>fl_control</name>
  <version>0.0.0</version>
  <description>The fl_control package</description>
  <maintainer email="oliver_git@protonmail.com">Oliver</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
